--- a/vignettes/example_hmm.Rmd
+++ b/vignettes/example_hmm.Rmd
@@ -2,9 +2,11 @@
 title: "Example: Hidden Markov Model"
 output: rmarkdown::html_vignette
 vignette: >
+  %\VignetteEncoding{UTF-8}
   %\VignetteIndexEntry{Example: Hidden Markov Model}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+editor_options: 
+  chunk_output_type: console
 ---
 
 ```{r, include = FALSE}
@@ -12,16 +14,84 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.dim = c(8, 6),
-  out.width = "100%",
-  eval = FALSE
+  out.width = "100%"
 )
 ```
 
-This vignette^[The vignette was build using R `r paste(R.Version()[6:7], collapse = ".")` with the {ino} `r utils::packageVersion("ino")` package.] is a demonstration of the {ino} package for the likelihood optimization of an hidden Markov model.
+```{r setup}
+#library(ino)
+devtools::load_all()
+library(ggplot2)
+options(ino_progress = FALSE)
+```
 
-- different optimizer
-- random initialization
-- fixed initialization
-- subset initialization (only first)
-- number local optima?
-- variation in optimization time?
+
+This vignette^[The vignette was build using R `r paste(R.Version()[6:7], collapse = ".")` with the {ino} `r utils::packageVersion("ino")` package.] describes the workflow of the {ino} package for the likelihood optimization of an hidden Markov model (HMM). The aim of this vignette is to learn about the functions and the workflow of ino, for more technical details about HMMs see, e.g.,  Zucchini et al. (2016).
+
+## Data
+
+The example data set considered throughout this vignette covers a series of earthquake counts. The data set is also included in the ino package.
+
+```{r}
+data("earthquakes")
+ggplot(earthquakes, aes(x = year, y = obs)) +
+  geom_point() + geom_line() + ylab("count")
+```
+
+As the observations are unbounded counts, we consider a Poisson-HMM. The (log-)likelihood of a Poisson-HMM is given by the function `f_ll_hmm()`.
+
+## Model fitting
+
+We consider an 2-state HMM (`N = 2`) with four parameters (`npar = 4`) to be estimated. Two parameters are required for the transition probability matrix (tpm), and another two correspond to the state-dependent Poisson means. `neg =  TRUE` indicates that we minimize the negative log-likelihood.  
+
+```{r}
+hmm_ino <- setup_ino(
+  f = ino:::f_ll_hmm,
+  npar = 4,
+  data = ino::earthquakes,
+  N = 2,
+  neg = TRUE,
+  opt = set_optimizer_nlm(),
+  verbose = FALSE)
+```
+
+### Random initialization
+
+We first use randomly chosen starting values. 
+
+```{r}
+for(i in 1:3)
+  hmm_ino <- random_initialization(hmm_ino)
+```
+
+
+### Fixed initialization
+
+For choosing fixed starting values, we set the two values for the tpm to -2, corresponding to probabilities to stay in state 1 and 2 of about 0.88 (note that we employ a multinomial logit link here to ensure that the probabilities are between 0 and 1). For the Poisson means, we consider values close to 15 and 25, as most counts fall in this region (note here that we exponentiate the means in the likelihood as they are constrained to be positive). We consider the following three sets of starting values:
+
+```{r}
+at <- list(c(-2, -2, log(20), log(40)), 
+           c(-2, -2, log(15), log(25)),
+           c(-2, -2, log(10), log(20)))
+for(i in 1:3)
+  hmm_ino <- fixed_initialization(hmm_ino, at = at[[i]])
+```
+
+### Subset initialization
+
+## Evaluating the optimization runs
+
+### Local optima
+
+```{r echo=TRUE}
+nr_optima(hmm_ino)
+plot(hmm_ino, var = "minimum", by = ".strategy", type = "barplot")
+```
+
+
+### Optimization time
+
+```{r}
+plot(hmm_ino, var = ".time", by = ".strategy")
+```
+
