--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -19,17 +19,16 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-#library(ino)
-devtools::load_all()
-library(ggplot2)
+library("ino")
 options(ino_progress = FALSE)
+library("ggplot2")
 ```
 
 This is the introductory vignette of {ino} explaining the purpose and giving a first example. The vignette was built using R `r paste(R.Version()[6:7], collapse = ".")` with the ino `r utils::packageVersion("ino")` package. 
 
 ## Getting started with {ino}
 
-Whenever we numerically optimize a function, we need to take care of several things: the chosen starting values, optimization algorithm, and optimizsation strategy (such as subset optimization) can have a substantial effect on the computational cost or even on the results. The purpose of the {ino} package is to provide a comprehensive toolbox for comparing such different settings when performing numerical optimization. 
+Whenever we numerically optimize a function, we need to take care of several things: the chosen starting values, optimization algorithm, and optimization strategy (such as subset optimization) can have a substantial effect on the computational cost or even on the results. The purpose of the {ino} package is to provide a comprehensive toolbox for comparing such different settings when performing numerical optimization. 
 
 Throughout this vignette, we will demonstrate the main functions of {ino}. In particular, we will show how to numerically optimize a likelihood function using {ino}, thereby applying different strategies for the choice of the starting values and the optimization strategy.
 
