--- a/vignettes/example_hmm.Rmd
+++ b/vignettes/example_hmm.Rmd
@@ -68,22 +68,21 @@ for(i in 1:3)
 For choosing fixed starting values, we set the two values for the tpm to -2, corresponding to probabilities to stay in state 1 and 2 of about 0.88 (note that we employ a multinomial logit link here to ensure that the probabilities are between 0 and 1). For the Poisson means, we consider values close to 15 and 25, as most counts fall in this region (note here that we exponentiate the means in the likelihood as they are constrained to be positive). We consider the following three sets of starting values:
 
 ```{r}
-at <- list(c(-2, -2, log(20), log(40)), 
+starting_values <- list(c(-2, -2, log(20), log(40)), 
            c(-2, -2, log(15), log(25)),
            c(-2, -2, log(10), log(20)))
-for(i in 1:3)
-  hmm_ino <- fixed_initialization(hmm_ino, at = at[[i]])
+for(val in starting_values)
+  hmm_ino <- fixed_initialization(hmm_ino, at = val)
 ```
 
 ### Subset initialization
 
-To illustrate the subset initialization strategy, we fit the 2-state HMM to the first half of the time series (`prop = 0.5`). The starting values for this subset are chosen randomly. The model is then fitted again to the entire sample using the estimates obtained for the subset as initial values.
+To illustrate the subset initialization strategy, we fit our HMM to the first 50\% and 60\% of the observations, respectively. The starting values for these subsets are chosen randomly. The function `subset_initialization()` then fits the HMM again to the entire sample using the estimates obtained from the subsets as initial values.
 
 ```{r}
-# hmm_ino <- subset_initialization(
-#     hmm_ino, arg = "data", how = "first", prop = 0.5,
-#     initialization = random_initialization()
-#     )
+props <- c(0.5, 0.6)
+for(i in 1:length(props))
+  hmm_ino <- subset_initialization(hmm_ino, arg = "data", how = "first", prop = props[i])
 ```
 
 
@@ -91,7 +90,7 @@ To illustrate the subset initialization strategy, we fit the 2-state HMM to the 
 
 ### Local optima
 
-Selecting the starting values for HMMs is a well-known issue, as poor starting values may likely result in local maxima. Other R packages designed to fit HMMs discuss this topic in more detail (see, e.g., https://cran.r-project.org/web/packages/moveHMM/vignettes/moveHMM-starting-values.pdf). We thus first evaluate the optimizations by comparing the likelihood values at convergence, which can be plotted using `overview_optima()`:
+Selecting the starting values for HMMs is a well-known issue, as poor starting values may likely result in local maxima. Other R packages designed to fit HMMs discuss this topic in more detail (see, e.g., https://cran.r-project.org/web/packages/moveHMM/vignettes/moveHMM-starting-values.pdf). We thus first evaluate the optimizations by comparing the likelihood values at convergence, which can be displayed using `overview_optima()`:
 
 ```{r}
 overview_optima(hmm_ino)
@@ -99,7 +98,7 @@ overview_optima(hmm_ino)
 
 The frequency table indicates that `r overview_optima(hmm_ino)[1,2]` runs converged to the same likelihood value (`r as.numeric(as.character(overview_optima(hmm_ino)[1,1]))`), which is the global maximum (note these are the negative log-likelihood values).  
 
-When comparing the likelihood values across the strategies, we see that the random starting values did sometimes result in a local maximum:
+When comparing the likelihood values across the strategies, we see that the random starting values resulted in a local maximum:
 
 ```{r}
 plot(hmm_ino, var = "minimum", by = ".strategy", type = "barplot")
@@ -120,7 +119,7 @@ hmm_ino$runs$pars[[4]]
 
 ### Optimization time
 
-We use the `plot()` function to investigate the computation time. Intuitively, the optimization runs with fixed starting values should be faster than with random starting values, since we have carefully chosen the fixed starting values by investigating the data. The boxplots confirm this intuition: 
+We use the `plot()` function to investigate the computation time. Intuitively, the optimization runs with fixed starting values should be faster than with random starting values, since we have carefully chosen the fixed starting values by investigating the data.The boxplots confirm this intuition: 
 
 ```{r}
 plot(hmm_ino, var = ".time", by = ".strategy")
