--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -29,7 +29,7 @@ In the following, we demonstrate the main functionality of {ino}. In particular,
 
 ## Example: Fitting a Gaussian mixture using {ino}
 
-We consider the popular `faithful` data set that is provided via base R.^[The data set contains information about the eruption times of the Old Faithful geyser in Yellowstone National Park, Wyoming, USA: the eruption time and the waiting time to the next eruption (both given in minutes). There are many published analyses of data relating to the Old Faithful geyser (see, e.g., refs).] The histogram of eruption times indicate two clusters with short and long eruption times, respectively:
+We consider the popular `faithful` data set that is provided via base R.^[The data set contains information about the eruption times of the Old Faithful geyser in Yellowstone National Park, Wyoming, USA: the eruption time and the waiting time to the next eruption (both given in minutes).] The histogram of eruption times indicate two clusters with short and long eruption times, respectively:
 
 ```{r}
 data("faithful")
@@ -100,14 +100,14 @@ for(val in starting_values)
   geyser_ino <- fixed_initialization(geyser_ino, at = val)
 ```
 
-The messages printed in the console summarises that we are using fixed initialisation here. In addition, there is also information given about a grid --- this concerns the progress if, for example, multiple data sets are used. We will learn more about this below.
+<!-- The messages printed in the console summarizses that we are using fixed initialization here. In addition, there is also information given about a grid --- this concerns the progress if, for example, multiple data sets are used. We will learn more about this below. -->
 
-Before we evaluate the optimisation runs, we first add some further optimisation runs using randomly chosen starting values. 
+Before we evaluate the optimization runs, we first add some further optimization runs using randomly chosen starting values. 
 
 
 ### Randomly chosen starting values
 
-When using randomly chosen starting values, we apply the function `random_initialization()`. The most simple (yet __not__ neccessarily effective) function call would be as follows:
+When using randomly chosen starting values, we apply the function `random_initialization()`. The most simple (yet __not__ necessarily effective) function call would be as follows:
 
 ```{r}
 geyser_ino <- random_initialization(geyser_ino)
@@ -123,12 +123,12 @@ The argument `sampler` allows to use any random number generator, while further 
 
 
 
-## Evaluating the optimisation runs
+## Evaluating the optimization runs
 
-The `geyser_ino` object now contains the results and further information on four optimization runs (two runs with fixed and randomly selected starting values, respectively). As we have chosen one rather unplausible set of fixed starting values, we first delete this (i.e., the second) run:
+The `geyser_ino` object now contains the results and further information on five optimization runs (three runs with fixed and two with randomly selected starting values). As we have chosen one rather unplausible set of fixed starting values, we first delete this (i.e., the third) run:
 
 ```{r}
-geyser_ino <- clear_ino(geyser_ino, which = 2)
+geyser_ino <- clear_ino(geyser_ino, which = 3)
 ```
 
 We can use `summary()` to obtain summary statistics for the optimization runs conducted. Moreover, we also can add grouping variables, for example to compare the average computation time for the two approaches:
@@ -146,7 +146,7 @@ If we do not set any group, `summary()` prints the entire table displaying all o
 summary(geyser_ino, group = NULL)
 ```
 
-Here, the fixed chosen starting values require `summary(geyser_ino, group = NULL)[1,8]` iterations until convergence --- much less than the optimization with randomly chosen starting values. The final (negative) log-likelihood value (column `minimum`) further indicates that the optimization run with random starting values drawn from a $\mathcal{N}(0,1)$ distribution resulted in a local minimum.
+Here, the first run with fixed chosen starting values requires `r summary(geyser_ino, group = NULL)[1,8]` iterations until convergence --- much less than the optimizations with randomly chosen starting values. The final (negative) log-likelihood value (column `minimum`) further indicates that the optimization run with random starting values drawn from a $\mathcal{N}(0,1)$ distribution (the third row) resulted in a local minimum.
 
 Aside from summary statistics, we can also visually inspect the optimization results. Using the `plot()` function, we can compare the computation using boxplots:
 
@@ -171,28 +171,22 @@ summary(geyser_ino, group = ".strategy", "average_time" = mean(.time))
 
 ### Subset initialization
 
-If the data set considered shows some complex structures or is simply very large, numerical optimization may become computationally costly. In such cases, *subset initialization* can be a helpful tool. 
+If the data set considered shows some complex structures or is very large, numerical optimization may become computationally costly. In such cases, *subset initialization* can be a helpful tool. 
 
-The function `subset_initialization` allows to use a subsample from the original data via the argument `prop`. We can then fit our model to that using either fixed or random initialization. For example, the following code snippet randomly samples 30\% of the observations and uses random initialization:
+The function `subset_initialization` uses a subsample from the data via the argument `prop` to optimize the likelihood. We can then fit our model to the subset using either fixed or random starting values. For example, the following code snippet randomly samples 75\% of the observations and uses random initialization:
 
 ```{r}
 geyser_ino <- subset_initialization(
      geyser_ino, prop = 0.75, initialization = random_initialization())
-
-# for(i in 1:5)
-#   geyser_ino <- subset_initialization(
-#     geyser_ino, how = "kmeans", prop = 0.3, initialization = random_initialization(),
-#     )
-#summary(geyser_ino, group = ".strategy", "average_time" = mean(.time))
 ```
 
-After having optimized the likelihood on the subsample, `subset_initialization()` then uses the resulting parameter estimates as starting values for the entire sample. The resulting optimization run is labelled as `subset>random` in the `summary()` table:
+After having optimized the likelihood on the subsample, `subset_initialization()` automatically fits the model to the entire data set using the resulting parameter estimates of the subset as starting values. The resulting optimization run is labelled as `subset>random` in the `summary()` table:
 
 ```{r}
 summary(geyser_ino, group = ".strategy", "average_time" = mean(.time))
 ```
 
-In addition to selecting subsamples at random, we can specify two further options using the argument `how`. When dealing with time series data, we usually do not want to delete single observations at random. Instead, we can select a proportion of the first rows by specifying `how="first`. We could also cluster our data first using `how="kmeans"`. 
+In addition to selecting subsamples at random, we can specify two further options using the argument `how`. When dealing with time series data, we usually do not want to delete single observations at random. Instead, we can select a proportion of the first rows by specifying `how = "first"`. We could also cluster our data first using `how = "kmeans"`. 
 For all subset optimization strategies, `subset_initialization()` first fits the model to the chosen subset and stores the resulting estimates. These estimates are then used as initial values in the second step where the model is fitted to the entire data. 
 
 In some of the examples above, we combined two optimization strategies. For example, we have chosen random starting values for a subset. The flexibility of {ino} also allows more than two combinations. We could, for example, select a subset, standardize the data, and then use random starting values.
